--- a/app/src/main/res/navigation/form_navigation.xml
+++ b/app/src/main/res/navigation/form_navigation.xml
@@ -42,6 +42,9 @@
         android:name="com.kodego.diangca.ebrahim.myslambook.ViewMemoriesFragment"
         android:label="fragment_view_memories"
         tools:layout="@layout/fragment_view_memories" >
+        <argument
+            android:name="slamBooK"
+            app:argType="com.kodego.diangca.ebrahim.myslambook.model.SlamBook" />
         <action
             android:id="@+id/action_viewMemoriesFragment_to_contactDetailsFragment"
             app:destination="@id/contactDetailsFragment" />
@@ -57,22 +60,7 @@
             app:argType="com.kodego.diangca.ebrahim.myslambook.model.SlamBook" />
     </fragment>
 
-    <action
-        android:id="@+id/action_FormPageThreeFragment_to_viewMemoriesFragment"
-        app:destination="@id/viewMemoriesFragment" />
-
-    <fragment
-        android:id="@+id/guestListFragment"
-        android:name="com.kodego.diangca.ebrahim.myslambook.GuestListFragment"
-        android:label="fragment_guest_list"
-        tools:layout="@layout/fragment_guest_list" >
-        <action
-            android:id="@+id/action_guestListFragment_to_viewMemoriesFragment"
-            app:destination="@id/viewMemoriesFragment" />
-    </fragment>
-
-    <action
-        android:id="@+id/action_mainMenuFragment_to_guestListFragment"
-        app:destination="@id/guestListFragment" />
+    <!-- Removed: action_FormPageThreeFragment_to_viewMemoriesFragment (Navigation now goes to MenuActivity) -->
+    <!-- Removed: guestListFragment and all related actions -->
 
 </navigation>
